# mlservice

./: .gitignore  README.md  pyproject.toml
.docker/: Dockerfile
src/: app.py
src/api/routes/: healthcheck.py  predict.py  router.py
src/schemas/: healthcheck.py  requests.py  response.py
src/services/: model.py  utils.py
