[tool.poetry]
name = "emotion-classification-service"
version = "0.1.0"
description = "ML service for classifying emotions in text"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.16.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
torch = "^2.2.2"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"